[tool.poetry]
name = "fastapi-layered"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
greenlet = "^3.0.3"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
alembic = "^1.13.1"
dependency-injector = "^4.41.0"
contextvars = "^2.4"
pyjwt = "^2.8.0"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
